# pauvsi_pgc_driver

./: CMakeLists.txt  README.md  install_flycapture.sh  install_flycapture_deps.sh  package.xml
FlyCapture/flycapture2.2/: README  flycap-2.10.3.169_amd64.deb  flycapture-doc-2.10.3.169_amd64.deb  install_flycapture.sh  libflycapture-2.10.3.169_amd64-dev.deb  libflycapture-2.10.3.169_amd64.deb  libflycapture-c-2.10.3.169_amd64-dev.deb  libflycapture-c-2.10.3.169_amd64.deb  libflycapturegui-2.10.3.169_amd64-dev.deb  libflycapturegui-2.10.3.169_amd64.deb  libflycapturegui-c-2.10.3.169_amd64-dev.deb  libflycapturegui-c-2.10.3.169_amd64.deb  libmultisync-2.10.3.169_amd64.deb
include/pgc_driver/: Driver.h
launch/: calibrator.launch  camera.launch
params/: 13S2C_params.yaml  13Y3C_params.yaml
src/: calibrator.cpp  pgc_driver.cpp
